--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -11,7 +11,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=62.171.151.220;Database=db_suporte;User Id=sa;Password=9{7q[e<=;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=62.171.151.220;Database=db_cerbero;User Id=sa;Password=9{7q[e<=;TrustServerCertificate=True;"
     },
     "AllowedHosts": "*"
 }
