--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,11 @@
 {
+    "Kestrel": {
+        "Endpoints": {
+        "Http": {
+            "Url": "http://0.0.0.0:9311"
+        }
+        }
+    },
     "JwtSettings": {
         "Issuer": "YourIssuer",
         "Audience": "YourAudience",
